--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -855,6 +855,8 @@
                 <span></span>
               </label>
             </div>
+            <ul id="permission-devices">
+            </ul>
             <menu data-items="2">
               <button id="permission-no"></button>
               <button id="permission-yes" class="affirmative"></button>
@@ -862,6 +864,16 @@
           </div>
         </div>
       </div>
+
+      <div id="device-list-item-tmpl" class="hide">
+      <!--
+        <label class="device-list deviceEnable">
+          <input class="input-enable" id="${id}" type="checkbox" ${checked}>
+          <span></span>
+        </label>
+        <span class="device-item">${label}</span>
+      -->
+    </div>
 
       <form id="app-install-dialog" class='app-install-dialog generic-dialog'
             data-type="confirm" role="dialog"
