--- a/apps/communications/contacts/fb_link.html
+++ b/apps/communications/contacts/fb_link.html
@@ -31,6 +31,7 @@
     <script  defer type="text/javascript" src="/facebook/js/facebook_connector.js"></script>
     <script  defer type="text/javascript" src="/facebook/js/fb_sync.js"></script>
     <script  defer type="text/javascript" src="/contacts/js/utilities/image_loader.js"></script>
+    <script  defer type="text/javascript" src="js/utilities/contact_fields.js"></script>
     <script  defer type="text/javascript" src="js/utilities/status.js"></script>
     <script  defer type="text/javascript" src="js/utilities/dom.js"></script>
     <script  defer type="text/javascript" src="/contacts/js/import_utils.js"></script>
