--- a/apps/gallery/index.html
+++ b/apps/gallery/index.html
@@ -19,7 +19,7 @@
     <!-- Shared code -->
     <script defer src="shared/js/l10n.js"></script>
     <script defer src="shared/js/l10n_date.js"></script>
-     <script defer src="shared/js/template.js"></script>
+    <script defer src="shared/js/template.js"></script>
     <script defer src="shared/js/device_storage/enumerate_all.js"></script>
     <script defer src="shared/js/mediadb.js"></script>
     <script defer src="shared/js/lazy_loader.js"></script>
@@ -63,12 +63,25 @@
         <div id="frame3" class="frame"></div>
       </div>
 
-      <button id="fullscreen-back-button" type="reset"></button>
       <footer id="fullscreen-toolbar">
-        <a id="fullscreen-camera-button" class="button"></a>
+        <a id="fullscreen-back-button" class="button"></a>
         <a id="fullscreen-edit-button" class="button"></a>
         <a id="fullscreen-share-button" class="button"></a>
+        <a id="fullscreen-info-button" class="button"></a>
         <a id="fullscreen-delete-button" class="button"></a>
+      </footer>
+    </section>
+
+    <section role="region" id="info-view" class="hidden">
+      <ul>
+        <li><span data-l10n-id="name-label"></span><span id="info-name" class="value"></span></li>
+        <li><span data-l10n-id="size-label"></span><span id="info-size" class="value"></span></li>
+        <li><span data-l10n-id="image-type-label"></span><span id="info-type" class="value"></span></li>
+        <li><span data-l10n-id="date-taken-label"></span><span id="info-date" class="value"></span></li>
+        <li><span data-l10n-id="resolution-label"></span><span id="info-resolution" class="value"></span></li>
+      </ul>
+      <footer>
+        <button id="info-close-button" data-l10n-id="close-button"></button>
       </footer>
     </section>
 
