--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -265,6 +265,10 @@
     <script defer src="js/base_ui.js"></script>
     <script defer src="js/app_modal_dialog.js"></script>
     <script defer src="js/window.js"></script>
+
+    <script defer src="js/shrinking_ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="style/shrinking_ui/shrinking_ui.css">
+
     <script defer src="js/wrapper_factory.js"></script>
     <script defer src="js/homescreen_window.js"></script>
     <script defer src="js/homescreen_launcher.js"></script>
