--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -260,6 +260,10 @@
     <!-- Identity -->
     <script defer src="js/identity.js"></script>
 
+    <!-- Fx Accounts -->
+    <link rel="stylesheet" type="text/css" href="style/firefox_account/firefox_account_container.css">
+    <script defer src="js/fxa_ui.js"></script>
+
     <!-- Operator Variant Mechanism -->
     <script defer src="shared/js/operator_variant_helper.js"></script>
     <script defer src="js/operator_variant/operator_variant_iccs.js"></script>
@@ -340,6 +344,10 @@
     <script defer src="js/rocketbar.js"></script>
     <script defer src="js/title.js"></script>
     <link rel="stylesheet" type="text/css" href="style/rocketbar.css">
+
+    <!-- Firefox Accounts-->
+    <script defer src="js/fxa_manager.js"></script>
+    
     <style>
       /* initlogos style is here to prevent flashing */
 
@@ -715,6 +723,9 @@
           </div>
         </div>
 
+        <!-- Firefox Account Dialog -->
+        <div id="fxa-dialog"></div>
+
         <div id="modal-dialog">
           <div id="modal-dialog-alert" role="dialog" class="generic-dialog" tabindex="-1">
             <div class="modal-dialog-message-container inner">
@@ -765,7 +776,6 @@
             </menu>
           </div>
         </div> <!-- end of #modal-dialog -->
-
       </div> <!-- end of #overlay-dialog -->
 
       <!-- value selector -->
