Bug 891030 - [Gallery] [User Story] Edit image orientation to correct for tilt sensor inaccuracies

--- a/apps/camera/index.html
+++ b/apps/camera/index.html
@@ -32,6 +32,7 @@
     <!-- <script defer src="/shared/js/lazy_l10n.js"></script> -->
     <!-- <script defer src="/shared/js/async_storage.js"></script> -->
     <!-- <script defer src="/shared/js/blobview.js"></script> -->
+    <!-- <script defer src="/shared/js/media/ext/jpeg.js"></script> -->
     <!-- <script defer src="/shared/js/media/jpeg_metadata_parser.js"></script> -->
     <!-- <script defer src="/shared/js/media/get_video_rotation.js"></script> -->
     <!-- <script defer src="/shared/js/media/video_player.js"></script> -->
