--- a/apps/gallery/index.html
+++ b/apps/gallery/index.html
@@ -149,17 +149,11 @@
              data-effect="faded"></a>
         </div>
 
-        <div id="edit-border-options" class="edit-options-bar hidden">
-          <a id="edit-border-none" class="selected radio button bgimage"
-             data-border-width="0"></a>
-          <a id="edit-border-thin-white" class="radio button bgimage"
-             data-border-width=".015" data-border-color="white"></a>
-          <a id="edit-border-thick-white" class="radio button bgimage"
-             data-border-width=".03" data-border-color="white"></a>
-          <a id="edit-border-thin-black" class="radio button bgimage"
-             data-border-width=".015" data-border-color="black"></a>
-          <a id="edit-border-thick-black" class="radio button bgimage"
-             data-border-width=".03" data-border-color="black"></a>
+        <div id="edit-rotation-options" class="edit-options-bar hidden">
+          <a id="edit-rotation-0" class="radio button">0&deg;</a>
+          <a id="edit-rotation-90" class="radio button">90&deg;</a>
+          <a id="edit-rotation-180" class="radio button">180&deg;</a>
+          <a id="edit-rotation-270" class="radio button">270&deg;</a>
         </div>
 
         <div id="edit-enhance-options" class="edit-options-bar hidden">
@@ -170,11 +164,21 @@
 
       <!-- buttons for selecting the type of edit to perform -->
       <footer id="edit-toolbar">
-        <a id="edit-exposure-button" class="selected radio button"></a>
-        <a id="edit-crop-button" class="radio button"></a>
-        <a id="edit-effect-button" class="radio button"></a>
-        <a id="edit-border-button" class="radio button"></a>
-        <a id="edit-enhance-button" class="radio button"></a>
+        <a id="edit-exposure-button" class="selected radio button">
+          <span class="icon"></span>
+        </a>
+        <a id="edit-crop-button" class="radio button">
+          <span class="icon"></span>
+        </a>
+        <a id="edit-effect-button" class="radio button">
+          <span class="icon"></span>
+        </a>
+        <a id="edit-rotation-button" class="radio button">
+          <span class="icon"></span>
+        </a>
+        <a id="edit-enhance-button" class="radio button">
+          <span class="icon"></span>
+        </a>
       </footer>
     </section>
 
