--- a/apps/gallery/open.html
+++ b/apps/gallery/open.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" defer src="shared/js/media/media_frame.js"></script>
     <script type="text/javascript" defer src="shared/js/blobview.js"></script>
     <script type="text/javascript" defer src="shared/js/mime_mapper.js"></script>
+    <script type="text/javascript" defer src="shared/js/media/ext/jpeg.js"></script>
     <script type="text/javascript" defer src="shared/js/media/jpeg_metadata_parser.js"></script>
     <script type="text/javascript" defer src="shared/js/device_storage/get_storage_if_available.js"></script>
     <script type="text/javascript" defer src="shared/js/device_storage/get_unused_filename.js"></script>
