Bug 944653 - [Flatfish] scale dialog & menu with 2 button correctly

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -622,7 +622,7 @@
                 <label for="always-send" data-l10n-id="crash-always-report">Always send Mozilla a report when a crash occurs.</label>
               <p>
             </section>
-            <menu>
+            <menu data-items="2">
               <button id="dont-send-report" disabled="true" data-l10n-id="crash-dont-send">Don't Send</button>
               <button id="send-report" class="recommend" data-l10n-id="crash-end">Send Report</button>
             </menu>
@@ -794,7 +794,7 @@
               </div>
             </div>
           </div>
-          <menu id="time-picker-buttons">
+          <menu id="time-picker-buttons" data-items="2">
             <button class="value-selector-cancel" data-type="cancel" data-l10n-id="cancel">Cancel</button>
             <button class="value-selector-confirm affirmative" data-type="ok" data-l10n-id="ok">OK</button>
           </menu>
@@ -865,7 +865,7 @@
                 <span id="app-install-author-url"></span>
               </dd>
           </dl>
-          <menu>
+          <menu data-items="2">
             <button id="app-install-cancel-button" data-l10n-id="cancel">Cancel</button>
             <button id="app-install-install-button" class="recommend" data-l10n-id="install">Install</button>
           </menu>
@@ -882,7 +882,7 @@
             <small data-l10n-id="apps-can-be-installed-later">Apps can be installed later from the original installation source.</small>
           </p>
           <p data-l10n-id="are-you-sure-you-want-to-cancel">Are you sure you want to cancel this install?</p>
-          <menu>
+          <menu data-items="2">
             <button id="app-install-confirm-cancel-button" type="reset" data-l10n-id="cancel-install">Cancel Install</button>
             <button id="app-install-resume-button" type="submit" data-l10n-id="resume">Resume</button>
           </menu>
@@ -896,7 +896,7 @@
           <h1></h1>
           <p data-l10n-id="app-download-can-be-restarted">The download can
           be restarted later.</p>
-          <menu>
+          <menu data-items="2">
             <button id="app-download-stop-button" class="danger confirm"
               data-l10n-id="app-download-stop-button">Stop Download</button>
             <button id="app-download-continue-button" class="cancel"
@@ -921,7 +921,7 @@
         <p id="updates-offline-warning" data-l10n-id="downloadOfflineWarning">
           Connection unavailable. Connect to a network to download updates.
         </p>
-        <menu>
+        <menu data-items="2">
           <button id="updates-later-button" type="reset"
                   data-l10n-id="later">Later</button>
           <button id="updates-download-button" type="submit"
@@ -967,7 +967,7 @@
         <section>
           <h1 id="setup-app-name"></h1>
           <p id="setup-app-description"></p>
-          <menu>
+          <menu data-items="2">
             <button id="setup-cancel-button" type="button" data-l10n-id="later">Later</button>
             <button id="setup-confirm-button" class="recommend" type="button" data-l10n-id="setup">Setup</button>
           </menu>
@@ -993,7 +993,7 @@
           </div>
           <ul id="ime-list">
           </ul>
-          <menu>
+          <menu data-items="2">
             <button id="ime-cancel-button" type="button" data-l10n-id="cancel">Cancel</button>
             <button id="ime-confirm-button" class="recommend" type="button" data-l10n-id="confirm">Confirm</button>
           </menu>
@@ -1140,7 +1140,7 @@
             <h1 data-l10n-id="icc-message">STK Message</h1>
             <p id="icc-asyncconfirm-msg"></p>
           </section>
-          <menu>
+          <menu data-items="2">
             <button type="button" data-l10n-id="no" id="icc-asyncconfirm-btn-no">No</button>
             <button type="button" data-l10n-id="yes" id="icc-asyncconfirm-btn-yes" class="recommend">Yes</button>
           </menu>
