--- a/apps/video/view.html
+++ b/apps/video/view.html
@@ -13,7 +13,7 @@
   <body role="application" class="skin-dark">
     <!-- display this at startup while we create thumbnails -->
     <div id="spinner-overlay"><div id="spinner"></div></div>
-    <div id="videoFrame">
+    <section role="region" id="videoFrame">
       <video id="player" preload="metadata"></video>
       <!-- video controls -->
       <div id="videoControls" class="hidden">
@@ -41,7 +41,7 @@
           </footer>
         </section>
       </div>
-    </div>
+    </section>
     <section id="banner" role="status" hidden>
       <p id="message"></p>
     </section>
