Bug 898354 - [User Story] Timer Notification
Add mozAlarms to the timer panel.

--- a/apps/clock/onring.html
+++ b/apps/clock/onring.html
@@ -21,7 +21,7 @@
           <span id="ring-clock-time"></span>
           <span id="ring-clock-hour24-state"></span>
         </div>
-        <div id="ring-alarm-label"></div>
+        <div id="ring-label"></div>
       </div>
       <div id="footer-button-container">
         <div id="ring-button-close" class="button" data-l10n-id="close">Close</div>
