--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -379,6 +379,7 @@
         <!-- Notification -->
         <div id="statusbar-notification" class="sb-start sb-icon sb-icon-notification"
           data-num="" hidden></div>
+        <div id="statusbar-keyboard" class="sb-start sb-icon sb-icon-keyboard" hidden></div>
 
         <!-- Time -->
         <div id="statusbar-time"></div>
