Bug 933203 - [DSDS] Operator variant logic: APN settings

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -261,6 +261,7 @@
 
     <!-- Operator Variant Mechanism -->
     <script defer src="shared/js/operator_variant_helper.js"></script>
+    <script defer src="js/operator_variant/operator_variant_iccs.js"></script>
     <script defer src="js/operator_variant/operator_variant.js"></script>
 
     <!-- Crash Reporter -->
