Bug 935424 - [HW test] telephony API test

--- a/test_apps/uitest/index.html
+++ b/test_apps/uitest/index.html
@@ -73,6 +73,7 @@
         <li><a href="#test=HW/ringer">Ringer</a></li>
         <li><a href="#test=HW/sdcards">SD cards</a></li>
         <li><a href="#test=HW/sensors">Sensors</a></li>
+        <li><a href="#test=HW/telephony">Telephony</a></li>
         <li><a href="#test=HW/touchscreen">Touch screen</a></li>
         <li><a href="#test=HW/vibrator">Vibrator</a></li>
         <li><a href="#test=HW/wifi">Wi-Fi</a></li>
