--- a/apps/settings/elements/phone_lock.html
+++ b/apps/settings/elements/phone_lock.html
@@ -11,7 +11,7 @@
         <li>
           <label class="pack-switch">
             <input type="checkbox" name="lockscreen.enabled" id="lockscreen-enable" class="uninit">
-            <span data-l10n-id="lockScreen">Lock Screen</span>
+            <span data-l10n-id="lockScreen">Lock screen</span>
           </label>
         </li>
         <li class="lockscreen-enabled">
