--- a/apps/settings/elements/about_legal.html
+++ b/apps/settings/elements/about_legal.html
@@ -15,12 +15,12 @@
       <ul>
         <li>
           <a href="#about-licensing" data-l10n-id="open-source-notices">
-            Open Source Notices
+            Open source notices
           </a>
         </li>
         <li>
           <a href="#about-source-code" data-l10n-id="obtaining-source-code">
-            Obtaining Source Code
+            Obtaining source code
           </a>
         </li>
       </ul>
