--- a/apps/settings/elements/improve_browser_os.html
+++ b/apps/settings/elements/improve_browser_os.html
@@ -13,7 +13,7 @@
             <button data-href="#improveBrowserOS-chooseFeedback"
                     data-l10n-id="sendMozillaFeedback"
                     class="icon icon-view">
-                Send Mozilla Feedback
+                Send Mozilla feedback
               </button>
           </label>
         </li>
