--- a/apps/settings/elements/improve_browser_os_send_feedback.html
+++ b/apps/settings/elements/improve_browser_os_send_feedback.html
@@ -42,7 +42,7 @@
       </li>
       <li>
         <label>
-          <button id="feedback-send-btn" data-l10n-id="feedback-sendbtn">Send Feedback</button>
+          <button id="feedback-send-btn" data-l10n-id="feedback-sendbtn">Send feedback</button>
         </label>
       </li>
     </ul>
