Bug 942175 - Add a search bar at the system level

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -309,6 +309,9 @@
     <script defer src="js/storage_watcher.js"></script>
     <link rel="stylesheet" type="text/css" href="style/storage_watcher/storage_watcher.css">
 
+    <!-- Rocketbar -->
+    <script defer src="js/rocketbar.js"></script>
+    <link rel="stylesheet" type="text/css" href="style/rocketbar.css">
     <style>
       /* initlogos style is here to prevent flashing */
 
@@ -1221,6 +1224,11 @@
       </div>
 
       <button id="fullscreen-software-home-button" data-z-index-level="fullscreen-software-home-button"></button>
+      <div id="search-bar" class="search-bar" data-z-index-level="search-bar">
+        <input id="search-input" type="search" class="search-input"></input>
+        <div id="search-container" class="search-container">
+        </div>
+      </div>
 
     </div> <!-- end of #screen -->
   </body>
