Revert "Bug 937443. Modify settings.en-US.properties."
This reverts commit ba80aad306ce1d7c023d0bcf51438d610fabe1da.

--- a/apps/settings/elements/about_more_info.html
+++ b/apps/settings/elements/about_more_info.html
@@ -48,7 +48,7 @@
         </li>
         <li>
           <label>
-            <button id="reset-phone" data-l10n-id="reset-phone">Reset phone</button>
+            <button id="reset-phone" data-l10n-id="reset-phone">Reset Phone</button>
           </label>
         </li>
       </ul>
