--- a/apps/settings/elements/about.html
+++ b/apps/settings/elements/about.html
@@ -27,7 +27,7 @@
         <li>
           <label>
             <button class="icon icon-view" data-href="#about-moreInfo"
-              data-l10n-id="more-info"> More information </button>
+              data-l10n-id="more-info"> More Information </button>
           </label>
         </li>
       </ul>
@@ -71,19 +71,19 @@
         <li>
           <label>
             <button class="icon icon-view" data-href="#about-yourRights"
-              data-l10n-id="your-rights"> Your rights </button>
+              data-l10n-id="your-rights"> Your Rights </button>
           </label>
         </li>
         <li>
           <label>
             <button class="icon icon-view" data-href="#about-yourPrivacy"
-              data-l10n-id="your-privacy"> Your privacy </button>
+              data-l10n-id="your-privacy"> Your Privacy </button>
           </label>
         </li>
         <li>
           <label>
             <button class="icon icon-view" data-href="#about-legal"
-              data-l10n-id="about-legal-info"> Legal information </button>
+              data-l10n-id="about-legal-info"> Legal Information </button>
           </label>
         </li>
       </ul>
