--- a/apps/settings/elements/about_legal.html
+++ b/apps/settings/elements/about_legal.html
@@ -15,12 +15,12 @@
       <ul>
         <li>
           <a href="#about-licensing" data-l10n-id="open-source-notices">
-            Open source notice
+            Open Source Notices
           </a>
         </li>
         <li>
           <a href="#about-source-code" data-l10n-id="obtaining-source-code">
-            Obtaining source code
+            Obtaining Source Code
           </a>
         </li>
       </ul>
