--- a/apps/settings/elements/sound.html
+++ b/apps/settings/elements/sound.html
@@ -84,13 +84,13 @@
         <li>
           <label class="pack-checkbox">
             <input type="checkbox" name="mail.sent-sound.enabled" checked>
-            <span data-l10n-id="sent-mail">Sent mail</span>
+            <span data-l10n-id="sent-mail">Sent Mail</span>
           </label>
         </li>
         <li>
           <label class="pack-checkbox">
             <input type="checkbox" name="message.sent-sound.enabled" checked>
-            <span data-l10n-id="sent-message">Sent message</span>
+            <span data-l10n-id="sent-message">Sent Message</span>
           </label>
         </li>
         <li>
