--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -140,7 +140,7 @@
 
     <!-- LockScreen -->
     <link rel="stylesheet" type="text/css" href="style/lockscreen/lockscreen.css">
-    <script defer src="js/lockscreen_slide.js"></script>
+    <script defer src="/shared/js/lockscreen_slide.js"></script>
     <script defer src="js/lockscreen.js"></script>
 
     <!-- PIN Unlocking -->
