Bug 946125 - Implement SIMSlot and SIMSlotManager

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -29,6 +29,10 @@
     <script defer src="shared/js/template.js"></script>
     -->
 
+    <!-- SIMSlots -->
+    <script defer src="js/simslot.js"></script>
+    <script defer src="js/simslot_manager.js"></script>
+
     <!-- Wrapper -->
     <link rel="stylesheet" type="text/css" href="style/wrapper/wrapper.css">
     <script type="text/javascript" defer src="js/wrapper.js"></script>
