Bug 944639 - [Download Manager] The complete downloads have to be stored to maintain the history in the download list

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -206,6 +206,7 @@
       <script src="shared/js/download/download_launcher.js"></script>
       <script src="shared/js/download/download_ui.js"></script>
       <script src="shared/js/download/download_formatter.js"></script>
+      <script src="shared/js/download/download_store.js"></script>
     -->
 
     <!-- Cards View -->
