--- a/apps/costcontrol/settings.html
+++ b/apps/costcontrol/settings.html
@@ -34,11 +34,10 @@
     <script type="text/javascript" defer src="shared/js/l10n_date.js"></script>
 
     <!-- Specific scripts -->
-    <script type="text/javascript" async src="js/validators.js"></script>
-    <script type="text/javascript" async src="js/views/BalanceLowLimitView.js"></script>
-    <script type="text/javascript" async src="js/settings/limitdialog.js"></script>
-    <script type="text/javascript" async src="js/settings/autosettings.js"></script>
-    <script type="text/javascript" async src="js/view_manager.js"></script>
+    <script type="text/javascript" defer src="js/views/BalanceLowLimitView.js"></script>
+    <script type="text/javascript" defer src="js/settings/limitdialog.js"></script>
+    <script type="text/javascript" defer src="js/settings/autosettings.js"></script>
+    <script type="text/javascript" defer src="js/view_manager.js"></script>
     <script type="text/javascript" defer src="js/views/BalanceView.js"></script>
     <script type="text/javascript" defer src="js/settings/settings.js"></script>
   </head>
