--- a/apps/communications/dialer/index.html
+++ b/apps/communications/dialer/index.html
@@ -68,13 +68,13 @@
   </head>
   <body role="application">
     <section id="views" role="tablist" data-items="3" class="bottom">
-      <article class="view hidden" role="tab" id="call-log-view">
-        <a id="option-recents" href="#call-log-view" class="icon icon-recents">recents</a>
+      <article class="view hidden tab-container" role="presentation" id="call-log-view">
+        <a id="option-recents" href="#call-log-view" class="icon icon-recents" role="tab" data-l10n-id="recents" aria-selected="false"></a>
         <div role="tabpanel">
           <section role="region">
             <header class="view-header regular-header">
               <menu type="toolbar">
-                <a id="call-log-icon-edit" class="disabled">
+                <a id="call-log-icon-edit" data-l10n-id="callLogEdit" disabled>
                   <span id="call-log-edit-button" class="recents-icon icon icon-edit "></span>
                 </a>
               </menu>
@@ -83,8 +83,8 @@
             <nav id="call-log-filter" class="recents-filter-container">
 
               <ul role="tablist" data-type="filter" data-items="2">
-                <li id="all-filter" role="tab" aria-selected="true"><a data-action="all" data-l10n-id="all"></a></li>
-                <li id="missed-filter" role="tab"><a data-action="missed" data-l10n-id="missed"></a></li>
+                <li class="tab-container" id="all-filter" role="presentation"><a data-action="all" data-l10n-id="all" role="tab" aria-selected="true"></a></li>
+                <li class="tab-container" id="missed-filter" role="presentation"><a data-action="missed" data-l10n-id="missed" role="tab" aria-selected="false"></a></li>
               </ul>
             </nav>
             <div class="view-body">
@@ -110,22 +110,22 @@
           </section>
         </form>
       </article>
-      <article class="view" role="tab" id="contacts-view">
-        <a id="option-contacts" href="#contacts-view" class="icon icon-contacts">contacts</a>
+      <article class="view tab-container" role="presentation" id="contacts-view">
+        <a id="option-contacts" href="#contacts-view" class="icon icon-contacts" role="tab" data-l10n-id="contacts" aria-selected="false"></a>
         <div id="iframe-contacts-container" role="tabpanel">
         </div>
       </article>
-      <article id="keyboard-view" role="tab">
-        <a id="option-keypad" href="#keyboard-view" class="icon icon-keypad">keypad</a>
+      <article class="tab-container" id="keyboard-view" role="presentation">
+        <a id="option-keypad" href="#keyboard-view" class="icon icon-keypad" role="tab" data-l10n-id="keypad" aria-selected="true"></a>
         <div role="tabpanel">
           <div id="phone-number-view-container">
             <div class="grid-cell grid-v-align">
               <div class="grid-wrapper">
-                <input id="phone-number-view" type="text" class="phone-number-font font-light" readonly="readonly">
+                <input id="phone-number-view" type="text" class="phone-number-font font-light" readonly="readonly" data-l10n-id="phoneNumberInput">
                 <div id="fake-phone-number-view"></div>
               </div>
             </div>
-            <div id="keypad-delete" class="grid-cell grid-v-align" data-value="delete">
+            <div id="keypad-delete" class="grid-cell grid-v-align" data-value="delete" role="button" data-l10n-id="keypadDelete">
               <div>
               </div>
             </div>
@@ -143,55 +143,55 @@
           <article id="keyboard-container">
             <section id="keypad">
               <div class="keypad-cell">
-                <div class="keypad-key" data-value="1" data-voicemail="true">
-                  1<em class="keypad-subicon voicemail"></em>
+                <div class="keypad-key" data-value="1" data-voicemail="true" role="key">
+                  1<em class="keypad-subicon voicemail" data-l10n-id="voiceMailKey"></em>
                 </div>
-                <div class="keypad-key" data-value="2">
+                <div class="keypad-key" data-value="2" role="key">
                   2<em>ABC</em>
                 </div>
-                <div class="keypad-key" data-value="3">
+                <div class="keypad-key" data-value="3" role="key">
                   3<em>DEF</em>
                 </div>
               </div>
               <div class="keypad-cell">
-                <div class="keypad-key" data-value="4">
+                <div class="keypad-key" data-value="4" role="key">
                   4<em>GHI</em>
                 </div>
-                <div class="keypad-key" data-value="5">
+                <div class="keypad-key" data-value="5" role="key">
                   5<em>JKL</em>
                 </div>
-                <div class="keypad-key" data-value="6">
+                <div class="keypad-key" data-value="6" role="key">
                   6<em>MNO</em>
                 </div>
               </div>
               <div class="keypad-cell">
-                <div class="keypad-key" data-value="7">
+                <div class="keypad-key" data-value="7" role="key">
                   7<em>PQRS</em>
                 </div>
-                <div class="keypad-key" data-value="8">
+                <div class="keypad-key" data-value="8" role="key">
                   8<em>TUV</em>
                 </div>
-                <div class="keypad-key" data-value="9">
+                <div class="keypad-key" data-value="9" role="key">
                   9<em>WXYZ</em>
                 </div>
               </div>
               <div class="keypad-cell">
-                <div class="keypad-key keypad-key-centered" data-value="*">
+                <div class="keypad-key keypad-key-centered" data-value="*" role="key" data-l10n-id="asterisk">
                   <div class="asterisk"></div>
                 </div>
-                <div class="keypad-key" data-value="0">
+                <div class="keypad-key" data-value="0" role="key">
                   0<em class="font-size-plus">+</em>
                 </div>
-                <div class="keypad-key keypad-key-centered" data-type="dial" data-value="#">
+                <div class="keypad-key keypad-key-centered" data-type="dial" data-value="#" role="key" data-l10n-id="hashSign">
                   <div class="sharp"></div>
                 </div>
               </div>
             </section>
             <section id="keypad-callbar">
-              <span role="button" id="keypad-callbar-add-contact" data-type="action" data-value="add-contact" class="disabled">
+              <span role="button" id="keypad-callbar-add-contact" data-type="action" data-value="add-contact" data-l10n-id="dialerAddContact" disabled aria-disabled="true">
                 <div class="icon-add-contact"></div>
               </span>
-              <span role="button" id="keypad-callbar-call-action" data-type="action" data-value="make-call">
+              <span role="button" id="keypad-callbar-call-action" data-type="action" data-value="make-call" data-l10n-id="makeCall">
                 <div>
                 </div>
               </span>
@@ -201,9 +201,9 @@
       </article>
     </section>
 
-    <form is="edit-mode" id="edit-mode" role="dialog" data-type="edit" hidden></form>
+    <form is="edit-mode" id="edit-mode" role="dialog" data-l10n-id="callLogEditDialog" data-type="edit" hidden></form>
 
-    <form is="add-contact-action-menu" id="add-contact-action-menu" role="dialog" data-type="action" hidden></form>
+    <form is="add-contact-action-menu" id="add-contact-action-menu" role="dialog" data-l10n-id="dialerAddContactDialog" data-type="action" hidden></form>
 
     <form is="confirmation-message" id="confirmation-message" class="hide no-opacity" role="dialog" data-type="confirm"></form>
 
