--- a/apps/communications/dialer/oncall.html
+++ b/apps/communications/dialer/oncall.html
@@ -63,7 +63,7 @@
             <span role="button" id="switch-calls-button">
             </span>
           </div>
-          <div class="hangup-button"></div>
+          <div class="hangup-button" role="button" data-l10n-id="hangup-a11y-button"></div>
           <div class="numberWrapper direction-status-bar">
             <div class="number font-light"></div>
           </div>
@@ -75,7 +75,7 @@
             <span class="font-light"></span>
             <div class="direction"></div>
           </div>
-          <button class="merge-button">Merge</button>
+          <button class="merge-button" data-l10n-id="merge">Merge</button>
         </section>
         <section id="group-call" hidden>
           <div class="numberWrapper">
@@ -87,7 +87,7 @@
             <span class="font-light"></span>
             <div class="direction"></div>
           </div>
-          <button class="merge-button">Merge</button>
+          <button class="merge-button" data-l10n-id="merge">Merge</button>
         </section>
       </article>
       <form id="group-call-details" role="dialog" data-type="action" class="overlay">
@@ -108,12 +108,12 @@
             <div id="swiper-icon-container">
               <div id="swiper-area-hangup" class="swiper-icon-area swiper-icon-left">
                 <div class="swiper-icon">
-                  <div id="swiper-accessibility-hangup" role="button" class="swiper-icon-a11y-button" data-l10n-id="hangup-a11y-button" aria-label="Hangup"></div>
+                  <div id="swiper-accessibility-hangup" role="button" class="swiper-icon-a11y-button" data-l10n-id="hangup-a11y-button"></div>
                 </div>
               </div>
               <div id="swiper-area-pickup" class="swiper-icon-area swiper-icon-right">
                 <div class="swiper-icon">
-                    <div id="swiper-accessibility-pickup" role="button" class="swiper-icon-a11y-button" data-l10n-id="pickup-a11y-button" aria-label="Pickup"></div>
+                    <div id="swiper-accessibility-pickup" role="button" class="swiper-icon-a11y-button" data-l10n-id="pickup-a11y-button"></div>
                 </div>
               </div>
 
@@ -153,25 +153,25 @@
             <section id="co-advanced">
               <div class="grid-wrapper grid">
                 <span class="grid-cell options-column">
-                  <button id="mute" class="co-advanced-option grid-wraper grid center">
+                  <button id="mute" class="co-advanced-option grid-wraper grid center" data-l10n-id="mute">
                     <span class="icon icon-mute">
                     </span>
                   </button>
                 </span>
                 <span class="grid-cell options-column">
-                  <button id="keypad-visibility" class="co-advanced-option grid-wraper grid center">
+                  <button id="keypad-visibility" class="co-advanced-option grid-wraper grid center" data-l10n-id="toggleKeypad">
                     <span class="icon icon-keypad-visibility">
                     </span>
                   </button>
                 </span>
                 <span id="place-new-call-container" class="grid-cell options-column">
-                  <button id="place-new-call" class="co-advanced-option grid-wraper grid center">
+                  <button id="place-new-call" class="co-advanced-option grid-wraper grid center" data-l10n-id="newCall">
                     <span class="icon icon-place-new-call">
                     </span>
                   </button>
                 </span>
                 <span class="grid-cell options-column">
-                  <button id="speaker" class="co-advanced-option grid-wraper grid">
+                  <button id="speaker" class="co-advanced-option grid-wraper grid" data-l10n-id="speaker">
                     <span class="icon icon-speaker">
                     </span>
                   </button>
@@ -179,13 +179,13 @@
             </section>
             <footer id="callbar">
               <div id="callbar-hang-up">
-                <span role="button" id="callbar-hang-up-action" class="callbar-button">
+                <span role="button" id="callbar-hang-up-action" class="callbar-button" data-l10n-id="hangup-a11y-button">
                   <div>
                   </div>
                 </span>
               </div>
               <div id="callbar-answer">
-                <span role="button" id="callbar-start-call-action" class="callbar-button">
+                <span role="button" id="callbar-start-call-action" class="callbar-button" data-l10n-id="pickup-a11y-button">
                   <div>
                   </div>
                 </span>
@@ -202,9 +202,9 @@
     </article>
     <article id="incoming-container">
       <header>
-        <button id="incoming-end">
+        <button id="incoming-end" data-l10n-id="hangup">
         </button>
-        <button id="incoming-answer">
+        <button id="incoming-answer" data-l10n-id="hold">
         </button>
       </header>
       <section id="incoming-info">
@@ -222,68 +222,68 @@
         <div id="phone-number-view-container">
           <div class="grid-cell grid-v-align">
             <div class="grid-wrapper">
-              <input id="phone-number-view" type="text" class="phone-number-font font-light" readonly="readonly">
+              <input id="phone-number-view" type="text" class="phone-number-font font-light" readonly="readonly" data-l10n-id="phoneNumberInput">
             </div>
           </div>
-          <div id="keypad-delete" class="grid-cell grid-v-align">
+          <div id="keypad-delete" class="grid-cell grid-v-align" role="button" data-l10n-id="keypadDelete">
             <div></div>
           </div>
         </div>
         <article id="keyboard-container">
           <section id="keypad">
             <div class="keypad-cell">
-              <div class="keypad-key" data-value="1" data-voicemail="true">
-                1<em class="keypad-subicon voicemail"></em>
+              <div class="keypad-key" data-value="1" data-voicemail="true" role="key">
+                1<em class="keypad-subicon voicemail" data-l10n-id="voiceMailKey"></em>
               </div>
-              <div class="keypad-key" data-value="2">
+              <div class="keypad-key" data-value="2" role="key">
                 2<em>ABC</em>
               </div>
-              <div class="keypad-key" data-value="3">
+              <div class="keypad-key" data-value="3" role="key">
                 3<em>DEF</em>
               </div>
             </div>
             <div class="keypad-cell">
-              <div class="keypad-key" data-value="4">
+              <div class="keypad-key" data-value="4" role="key">
                 4<em>GHI</em>
               </div>
-              <div class="keypad-key" data-value="5">
+              <div class="keypad-key" data-value="5" role="key">
                 5<em>JKL</em>
               </div>
-              <div class="keypad-key" data-value="6">
+              <div class="keypad-key" data-value="6" role="key">
                 6<em>MNO</em>
               </div>
             </div>
             <div class="keypad-cell">
-              <div class="keypad-key" data-value="7">
+              <div class="keypad-key" data-value="7" role="key">
                 7<em>PQRS</em>
               </div>
-              <div class="keypad-key" data-value="8">
+              <div class="keypad-key" data-value="8" role="key">
                 8<em>TUV</em>
               </div>
-              <div class="keypad-key" data-value="9">
+              <div class="keypad-key" data-value="9" role="key">
                 9<em>WXYZ</em>
               </div>
             </div>
             <div class="keypad-cell">
-              <div class="keypad-key keypad-key-centered" data-value="*">
+              <div class="keypad-key keypad-key-centered" data-value="*" role="key" data-l10n-id="asterisk">
                 <div class="asterisk"></div>
               </div>
-              <div class="keypad-key" data-value="0">
+              <div class="keypad-key" data-value="0" role="key">
                 0<em class="font-size-plus">+</em>
               </div>
-              <div class="keypad-key keypad-key-centered" data-type="dial" data-value="#">
+              <div class="keypad-key keypad-key-centered" data-type="dial" data-value="#" role="key" data-l10n-id="hashSign">
                 <div class="sharp"></div>
               </div>
             </div>
           </section>
           <section id="keypad-callbar">
             <div>
-              <span role="button" id="keypad-callbar-add-contact" data-type="action" data-value="add-contact" >
+              <span role="button" id="keypad-callbar-add-contact" data-type="action" data-value="add-contact" data-l10n-id="dialerAddContact" disabled aria-disabled="true">
                 <div class="icon-add-contact"></div>
               </span>
             </div>
             <div>
-              <span role="button" id="keypad-callbar-call-action" data-type="action" data-value="make-call">
+              <span role="button" id="keypad-callbar-call-action" data-type="action" data-value="make-call" data-l10n-id="makeCall">
                 <div>
                 </div>
               </span>
@@ -291,13 +291,13 @@
           </section>
           <section id="keypad-hidebar">
             <div id="keypad-hidebar-hang-up-action-wrapper">
-              <span role="button" id="keypad-hidebar-hang-up-action" class="keypad-hidebar-button">
+              <span role="button" id="keypad-hidebar-hang-up-action" class="keypad-hidebar-button" data-l10n-id="hideBar">
                 <div>
                 </div>
               </span>
             </div>
             <div id="keypad-hidebar-hide-keypad-action-wrapper">
-              <span role="button" id="keypad-hidebar-hide-keypad-action" class="keypad-hidebar-button">
+              <span role="button" id="keypad-hidebar-hide-keypad-action" class="keypad-hidebar-button" data-l10n-id="hideKeypad">
                 <div>
                 </div>
               </span>
