Bug 945544 - [e-mail][user story] Support Empty Trash for POP3. SANS GELAM CHANGES

--- a/apps/email/js/cards/message_list.html
+++ b/apps/email/js/cards/message_list.html
@@ -70,6 +70,14 @@
         <input class="msg-search-text-tease" type="text"
                data-l10n-id="message-search-input" />
       </div>
+      <!-- POP3 empty trash bar -->
+      <div class="msg-empty-trash-container msg-nonsearch-only collapsed">
+        <a role="button" class="msg-empty-trash-button danger">
+          <div class="msg-empty-trash-icon"></div>
+          <div class="msg-empty-trash-label"
+               data-l10n-id="messages-empty-trash-bar">EmptY TrasH</div>
+        </a>
+      </div>
       <div class="msg-messages-container">
       </div>
       <!-- maintain vertical space for the syncing/sync more div's
