--- a/apps/search/index.html
+++ b/apps/search/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0">
     <link rel="stylesheet" href="style/search.css">
     <script defer src="js/search.js"></script>
+    <script defer src="js/providers/contacts.js"></script>
+    <script defer src="js/providers/local_apps.js"></script>
   <head>
   <body>
     <div id="search-terms">
