testing for intermittent ui test failure

--- a/apps/communications/contacts/index.html
+++ b/apps/communications/contacts/index.html
@@ -154,7 +154,7 @@
                   </label>
                 </p>
               </form>
-              <section id="groups-list" data-type="list" class="active">
+              <section id="groups-list" data-type="list">
                 <!-- Group template here -->
               </section>
             </div>
