--- a/apps/settings/elements/wifi.html
+++ b/apps/settings/elements/wifi.html
@@ -53,16 +53,7 @@
             <button id="manageNetworks"
                     class="icon icon-view"
                     data-l10n-id="manageNetworks">
-              Manage networks
-            </button>
-          </label>
-        </li>
-        <li>
-          <label>
-            <button id="manageCertificates"
-                    class="icon icon-view"
-                    data-l10n-id="manageCertificates">
-              Manage certificates
+              Manage Networks
             </button>
           </label>
         </li>
