--- a/apps/settings/elements/downloads.html
+++ b/apps/settings/elements/downloads.html
@@ -1,17 +1,36 @@
 <element name="downloads" extends="section">
   <template>
-    <header>
-      <a href="#root"><span class="icon icon-back">back</span></a>
+    <header id="downloads-header">
+      <a href="#root"><span class="icon icon-back"></span></a>
+      <menu type="toolbar">
+        <a id="downloads-edit-button" class="">
+          <span class="icon icon-edit"></span>
+        </a>
+      </menu>
       <h1 data-l10n-id="downloads"> Downloads </h1>
+    </header>
+    <header id="edit-mode-header">
+      <a id="downloads-close-button"><span class="icon icon-close"></span></a>
+      <menu type="toolbar">
+        <button disabled id="downloads-delete-button"></button>
+      </menu>
+      <h1 id="downloads-title-edit"></h1>
     </header>
     <section id="download-list-empty" class="hide">
       <span id="dle-vertical"></span>
       <span id="dle-text"></span>
     </section>
-    <section id="downloadList">
+    <section id="downloadList"  data-type="list">
       <ul>
       </ul>
     </section>
+    <menu id="downloads-edit-menu">
+      <button id="downloads-edit-deselect-all" disabled class="downloads-edit-button">
+      </button>
+      <button id="downloads-edit-select-all" class="downloads-edit-button">
+      </button>
+    </menu>
+    <link rel="stylesheet" type="text/css" href="shared/style/input_areas.css">
     <link rel="stylesheet" type="text/css" href="style/downloads.css"/>
     <script src="js/downloads/downloads_list.js"></script>
   </template>
