--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -144,6 +144,7 @@
     <!-- LockScreen -->
     <link rel="stylesheet" type="text/css" href="style/lockscreen/lockscreen.css">
     <script defer src="/shared/js/lockscreen_slide.js"></script>
+    <script defer src="js/lockscreen_connection_info_manager.js"></script>
     <script defer src="js/lockscreen.js"></script>
 
     <!-- PIN Unlocking -->
@@ -1033,7 +1034,7 @@
         <div id="lockscreen-container">
           <div id="lockscreen-panel-main" class="lockscreen-panel">
             <div id="lockscreen-header">
-              <div id="lockscreen-connstate" hidden><span></span><span></span></div>
+              <div id="lockscreen-conn-states" hidden></div>
               <div id="lockscreen-mute" hidden></div>
               <div id="lockscreen-alt-camera" class="lockscreen-icon">
                 <div role="button" data-l10n-id="camera-a11y-button" aria-label="Camera"></div>
