Bug 946113 - [Settings - Do not track] Update margins and list height

--- a/apps/settings/elements/do_not_track.html
+++ b/apps/settings/elements/do_not_track.html
@@ -8,20 +8,20 @@
 
     <div>
       <ul>
-        <li class="description">
-          <label class="pack-radio">
+        <li>
+          <label class="pack-radio description">
             <input type="radio" name="privacy.donottrackheader.value" value="1">
             <span data-l10n-id="doNotTrackActions">Tell websites and apps that I do not want to be tracked</span>
           </label>
         </li>
-        <li class="description">
-          <label class="pack-radio">
+        <li>
+          <label class="pack-radio description">
             <input type="radio" name="privacy.donottrackheader.value" value="0">
             <span data-l10n-id="allowTracking">Tell websites and apps that I want to be tracked</span>
           </label>
         </li>
-        <li class="description">
-          <label class="pack-radio">
+        <li>
+          <label class="pack-radio description">
             <input type="radio" name="privacy.donottrackheader.value" value="-1">
             <span data-l10n-id="doNotHavePrefOnTracking">Do not tell websites and apps anything about my tracking preferences</span>
           </label>
