Bug 936398 - fixed settings string to conform to UX guidelines

--- a/apps/settings/elements/about_legal.html
+++ b/apps/settings/elements/about_legal.html
@@ -5,7 +5,7 @@
       <a href="#about">
         <span class="icon icon-back">back</span>
       </a>
-      <h1 data-l10n-id="about-legal-info-header"> Legal Information </h1>
+      <h1 data-l10n-id="about-legal-info-header"> Legal information </h1>
     </header>
 
     <div>
@@ -20,7 +20,7 @@
         </li>
         <li>
           <a href="#about-source-code" data-l10n-id="obtaining-source-code">
-            Obtaining Source Code
+            Obtaining source code
           </a>
         </li>
       </ul>
