--- a/apps/settings/elements/do_not_track.html
+++ b/apps/settings/elements/do_not_track.html
@@ -44,7 +44,7 @@
             log-in information.
           </p>
           <p>
-            <a href="http://dnt.mozilla.org" data-l10n-id="learn-more" class="link-text">Learn More</a>
+            <a href="http://dnt.mozilla.org" data-l10n-id="learn-more" class="link-text">Learn more</a>
           </p>
         </li>
       </ul>
