--- a/apps/settings/elements/sim_manager.html
+++ b/apps/settings/elements/sim_manager.html
@@ -11,7 +11,7 @@
       </header>
       <ul class="sim-manager-select-list">
         <li data-href="#simpin" id="sim-manager-security-entry">
-          <p data-l10n-id="simSecurity" data-href="#simpin">SIM Security</p>
+          <p data-l10n-id="simSecurity" data-href="#simpin">SIM security</p>
           <p id="sim-manager-security-desc" class="explanation"></p>
         </li>
         <li>
