--- a/apps/settings/elements/wifi_auth.html
+++ b/apps/settings/elements/wifi_auth.html
@@ -65,7 +65,7 @@
           </span>
         </li>
         <li class="description server-certificate-description" data-l10n-id="import-certificate-msg">
-          Notice: If you need to import new certificates, please go to “Manage certificates".
+          Notice: if you need to import new certificates, please go to “Manage certificates".
         </li>
       </ul>
     </div>
