--- a/apps/settings/elements/app_permissions_details.html
+++ b/apps/settings/elements/app_permissions_details.html
@@ -24,9 +24,9 @@
       </ul>
 
       <header>
-        <h2 data-l10n-id="uninstallApp">Uninstall App</h2>
+        <h2 data-l10n-id="uninstallApp">Uninstall app</h2>
       </header>
-      <button id="uninstall-app" data-l10n-id="uninstallApp" class="danger">Uninstall App</button>
+      <button id="uninstall-app" data-l10n-id="uninstallApp" class="danger">Uninstall app</button>
     </div>
 
   </template>
