--- a/apps/settings/elements/date_time.html
+++ b/apps/settings/elements/date_time.html
@@ -11,7 +11,7 @@
         <li>
           <label class="pack-switch">
             <input type="checkbox" name="time.clock.automatic-update.enabled" class="uninit">
-            <span data-l10n-id="setTimeAutomatically">Set Automatically</span>
+            <span data-l10n-id="setTimeAutomatically">Set automatically</span>
           </label>
         </li>
       </ul>
