--- a/apps/settings/elements/simpin_dialog.html
+++ b/apps/settings/elements/simpin_dialog.html
@@ -24,7 +24,7 @@
       </div>
 
       <div class="sim-code-area sim-pukArea">
-        <div data-l10n-id="pukCode">PUK Code</div>
+        <div data-l10n-id="pukCode">PUK code</div>
         <input type="password" x-inputmode="digit" size="8" maxlength="8" />
       </div>
 
@@ -37,7 +37,7 @@
 
       <div class="sim-code-area sim-confirmPinArea">
         <div data-l10n-id="confirmNewSimPinMsg">
-          Confirm New PIN
+          Confirm new PIN
         </div>
         <input type="password" x-inputmode="digit" size="8" maxlength="8" />
       </div>
