--- a/apps/settings/elements/sound.html
+++ b/apps/settings/elements/sound.html
@@ -60,7 +60,7 @@
       </ul>
 
       <header>
-        <h2 data-l10n-id="other-sounds">Other Sounds</h2>
+        <h2 data-l10n-id="other-sounds">Other sounds</h2>
       </header>
       <ul>
         <li>
@@ -72,31 +72,31 @@
         <li>
           <label class="pack-checkbox">
             <input type="checkbox" name="camera.shutter.enabled" checked>
-            <span data-l10n-id="camera-shutter">Camera Shutter</span>
+            <span data-l10n-id="camera-shutter">Camera shutter</span>
           </label>
         </li>
         <li>
           <label class="pack-checkbox">
             <input type="checkbox" name="camera.recordingsound.enabled" checked>
-            <span data-l10n-id="camera-recordingsound">Camera Recording Sound</span>
+            <span data-l10n-id="camera-recordingsound">Camera recording Sound</span>
           </label>
         </li>
         <li>
           <label class="pack-checkbox">
             <input type="checkbox" name="mail.sent-sound.enabled" checked>
-            <span data-l10n-id="sent-mail">Sent Mail</span>
+            <span data-l10n-id="sent-mail">Sent mail</span>
           </label>
         </li>
         <li>
           <label class="pack-checkbox">
             <input type="checkbox" name="message.sent-sound.enabled" checked>
-            <span data-l10n-id="sent-message">Sent Message</span>
+            <span data-l10n-id="sent-message">Sent message</span>
           </label>
         </li>
         <li>
           <label class="pack-checkbox">
             <input type="checkbox" name="lockscreen.unlock-sound.enabled" checked>
-            <span data-l10n-id="unlock-screen">Unlock Screen</span>
+            <span data-l10n-id="unlock-screen">Unlock screen</span>
           </label>
         </li>
       </ul>
